force-app/main/default/objects/CommissionDetail__c/CommissionDetail__c.object-meta.xml
<CustomObject>
    <label>Commission Detail</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Commission Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CommissionDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>