force-app/main/default/objects/CommissionDetail__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipName>Commission_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>