force-app/main/default/objects/CommissionDetail__c/fields/CommissionConfiguration__c.field-meta.xml
<CustomField>
    <fullName>CommissionConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Configuration</label>
    <referenceTo>CommissionConfiguration__c</referenceTo>
    <relationshipLabel>CommissionDetails</relationshipLabel>
    <relationshipName>CommissionDetails</relationshipName>
    <type>Lookup</type>
</CustomField>