force-app/main/default/objects/CommissionDetail__c/fields/DataIndex__c.field-meta.xml
<CustomField>
    <fullName>DataIndex__c</fullName>
    <formula>CASESAFEID(ResponsiblePerson__c )+ &apos;_&apos; + Year__c + &apos;_&apos; + Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Index</label>
    <type>Text</type>
</CustomField>