force-app/main/default/objects/CommissionDetail__c/fields/FinalAmount__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount__c</fullName>
    <formula>TotalAmount__c *  TotalCompleteRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>