force-app/main/default/objects/CommissionDetail__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT( Commission__r.Month__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>