force-app/main/default/objects/CommissionDetail__c/fields/ResponsiblePerson__c.field-meta.xml
<CustomField>
    <fullName>ResponsiblePerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Person</label>
    <referenceTo>Responsible_Person__c</referenceTo>
    <relationshipLabel>CommissionDetails</relationshipLabel>
    <relationshipName>CommissionDetails</relationshipName>
    <type>Lookup</type>
</CustomField>