force-app/main/default/objects/CommissionDetail__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>CommissionModule__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CommissionModule__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Total</value>
    </summaryFilterItems>
    <summaryForeignKey>CommissionModule__c.CommissionDetail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>