force-app/main/default/objects/CommissionDetail__c/fields/TotalCompleteRate__c.field-meta.xml
<CustomField>
    <fullName>TotalCompleteRate__c</fullName>
    <label>Total Complete Rate</label>
    <summarizedField>CommissionModule__c.ModuleCompleteRate__c</summarizedField>
    <summaryForeignKey>CommissionModule__c.CommissionDetail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>